--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -68,7 +68,7 @@
   --text: #f8fafc;
   --text-light:#e0f2fe;
   --text-light-hover:#bae6fd;
-  --primary: #2563eb;
+  --primary: #1e3a8a;
   --primary-hover: #1d4ed8;
   --secondary: #1e3a8a;
   --border: #4b5563;
@@ -100,7 +100,7 @@
   --text: #f8fafc;
   --text-light:#fff2f1;
   --text-light-hover:#ffcdd2;
-  --primary: #f87171;
+  --primary: #7f1d1d;
   --primary-hover: #ef4444;
   --secondary: #7f1d1d;
   --border: #4b5563;
