--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -110,7 +110,7 @@
   --border: #4b5563;
   --success: #059669;
   --error: #ef4444;
-  --info: #2563eb;
+  --info: #60a5fa;
   --divide: #ffcdd2;
 }
 
