--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -133,3 +133,16 @@ body {
   color: var(--text);
 }
 
+.modal-scroll::-webkit-scrollbar {
+  width: 4px;
+}
+
+.modal-scroll::-webkit-scrollbar-thumb {
+  background-color: rgba(255, 255, 255, 0.6);
+  border-radius: 9999px;
+}
+
+.modal-scroll::-webkit-scrollbar-track {
+  background: transparent;
+}
+
